syntax = "proto2";

package proto;

option go_package = "./proto";

service BirdService{
  rpc Create(CreateRequest) returns (CreateReply){}
  rpc Get(GetRequest) returns (GetReply){}
  rpc Change(ChangeRequest) returns (ChangeReply){}
  rpc Delete(DeleteRequest) returns (DeleteReply){}
}


message CreateRequest{
  required string token = 1;
  required string name = 2;
  required string type = 3;
}

message CreateReply{
  required string message = 1;
}


message GetRequest{
  required string token = 1;
}

message GetReply{
  required bytes bird = 1;
}


message ChangeRequest{
  required string token = 1;
  required string name = 2;
  required string type = 3;
}

message ChangeReply{
  required string message = 1;
}

message DeleteRequest{
  required string token = 1;
}

message DeleteReply{
  required string message = 1;
}